forked and revised for my website

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/icons/favicon-32x32.png"
+      href="assets/icons/G-icon.svg"
     />
 
     <!-- Animate CSS CDN -->
@@ -26,13 +26,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Jane Doe | Web Developer</title>
+    <title>Ghia Yuson | Web Developer</title>
   </head>
 
   <body>
     <!-- Navbar -->
     <nav>
-      <h1>JANE DOE</h1>
+      <h1>GHIA YUSON</h1>
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -45,23 +45,21 @@
       </button>
     </nav>
     
-    <p> 0024 </p>
 
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="assets/images/wfh_1.svg"
-        alt="jane-doe"
+        src="assets/images/ghia_bastad.JPG"
+        alt="g-at-the-beach"
         loading="lazy"
         class="hero-img"
       />
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-          dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-          inventore tempore minus nemo, iste ullam illo laboriosam maiores
-          repudiandae quos!
+          I’m a <b>developer, project manager,</b> and <b>problem solver</b> who started 
+          building for the web in some capacity since COVID. I focus on developing websites 
+          and applications for small businesses, helping them get the word out there.
         </p>
       </div>
     </section>
@@ -70,18 +68,20 @@
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+        I took the non-traditional route to development. Working in <b>finance and strategy</b> for 12+ years 
+        doesn’t give you a lot of time for anything else, but it did hone my problem solving and project 
+        management abilities. COVID hit the world in 2020, time stood still, and I finally had the space to 
+        teach myself to code (and signed up for a <a href="https://www.nucamp.co/">bootcamp</a> or 2).
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis
+        In quarantine, I got to spent virtual time with a few friends who were running their own 
+        small businesses that range from food to retail to services. Jointly with them, I realize 
+        that a good number of SMEs would benefit from having better online presence in order to accelerate sales 
+        and growth.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-        consequuntur labore? Ea totam voluptas amet!
+        These days, I run my freelance business remotely from the beautiful town of <b>Örebro, Sweden</b> 
+        where I also work full-time within supply chain for one of Sweden’s largest companies.
       </p>
     </section>
 
@@ -113,19 +113,19 @@
 
         <div class="second-set animate__animated animate__pulse">
           <img
-            src="assets/icons/icons8-bootstrap.svg"
+            src="assets/icons/icons8-python.svg"
             alt=""
             loading="lazy"
             class="icon icon-card"
           />
           <img
-            src="assets/icons/icons8-react-native.svg"
+            src="assets/icons/icons8-postgresql.svg"
             alt=""
             loading="lazy"
             class="icon icon-card"
           />
           <img
-            src="assets/icons/icons8-git.svg"
+            src="assets/icons/icons8-docker.svg"
             alt=""
             loading="lazy"
             class="icon icon-card"
@@ -191,7 +191,7 @@
       <h2>Get In Touch With Me</h2>
       <div class="contact-form-container">
         <div class="contact-form">
-          <form action="https://formspree.io/f/xyylnggw" method="POST">
+          <form action="https://formspree.io/f/xjvlnvql" method="POST">
             <div class="form-control">
               <label for="name">Name</label>
               <input
@@ -239,28 +239,28 @@
 
     <!-- Social accounts - Fixed to the right -->
     <div class="socials">
-      <a href="#" target="_blank"
+      <a href="https://twitter.com/g__yuson" target="_blank"
         ><img
           src="assets/icons/icons8-twitter-circled.gif"
           alt="Twitter"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://www.instagram.com/g_yuson/" target="_blank"
         ><img
           src="assets/icons/icons8-instagram.gif"
           alt="Instagram"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://www.linkedin.com/in/ghiayuson/" target="_blank"
         ><img
           src="assets/icons/icons8-linkedin-circled.gif"
           alt="Linkedin"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://github.com/gyuson" target="_blank"
         ><img src="assets/icons/icons8-github.gif" alt="Github" class="socicon"
       /></a>
     </div>
@@ -275,13 +275,7 @@
 
     <!-- Footer section -->
     <footer>
-      <p class="copy">&copy; Copyright 2021</p>
-      <p class="copy">
-        Built with &#x2661; by
-        <a href="https://twitter.com/koladechris" target="_blank"
-          >Kolade Chris (Ksound)</a
-        >
-      </p>
+      <p class="copy">&copy; Copyright 2022</p>
     </footer>
 
     <!-- Website scripts -->
