--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="assets/images/ghia_bastad.JPG"
+        src="assets/images/ghia_bastad_resize.jpg"
         alt="g-at-the-beach"
         loading="lazy"
         class="hero-img"
