--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
-        <li><a href="#projects" class="nav-link">Projects</a></li>
+        <!-- <li><a href="#projects" class="nav-link">Projects</a></li> --> <!-- Coming Soon -->
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
       <button class="burger-menu" id="burger-menu">
@@ -134,7 +134,7 @@
       </div>
     </section>
 
-    <!-- Projects section -->
+    <!-- Projects section 
     <section class="projects" id="projects">
       <h2 class="projects-title">Some of my Recent Projects</h2>
       <div class="projects-container">
@@ -184,7 +184,7 @@
           <a href="#" target="_blank" class="project-link">Check it Out</a>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Contact section -->
     <section class="contact" id="contact">
