change avatar image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ghia Yuson's personal website. I'm a developer, project manager and problem solver who will build awesome web stuff for your business." />
 
     <!--CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -49,8 +50,8 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="assets/images/ghia_bastad_resize.jpg"
-        alt="g-at-the-beach"
+        src="assets/images/aViwHlDe.jpg-large.jpeg"
+        alt="Notion avatar G"
         loading="lazy"
         class="hero-img"
       />
@@ -58,8 +59,8 @@
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
           I’m a <b>developer, project manager,</b> and <b>problem solver</b> who started 
-          building for the web in some capacity since COVID. I focus on developing websites 
-          and applications for small businesses, helping them get the word out there.
+          building for the web since COVID. I focus on developing websites 
+          and applications for small businesses, helping you get the word out there.
         </p>
       </div>
     </section>
@@ -76,12 +77,12 @@
       <p>
         In quarantine, I got to spent virtual time with a few friends who were running their own 
         small businesses that range from food to retail to services. Jointly with them, I realize 
-        that a good number of SMEs would benefit from having better online presence in order to accelerate sales 
-        and growth.
+        that a good number of <b>small businesses would benefit from having better online presence in order to accelerate sales 
+        and growth</b>.
       </p>
       <p>
-        These days, I run my freelance business remotely from the beautiful town of <b>Örebro, Sweden</b> 
-        where I also work full-time within supply chain for one of Sweden’s largest companies.
+        These days, I run my web dev side hustle remotely from the beautiful town of <b>Örebro, Sweden</b>. 
+        I look forward to building your next website or application.
       </p>
     </section>
 
